@@ -5,6 +5,7 @@
 2010-05-28  Susanne Moog  <typo3@susanne-moog.de>
 
 	* Follow-up to bug #14465: Make use of the new Sprite API throughout the TYPO3 Core Backend
+	* Fixed bug #1402: Text area / RTE fields can't be set to required at the moment.
 
 2010-05-28  Christian Kuhn  <lolli@schwarzbu.ch>
 
